Fixed image alignment issue

--- a/style.css
+++ b/style.css
@@ -1,62 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700&family=Julius+Sans+One&family=Outfit:wght@400;700&display=swap');
 
-
-
-* {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
 body {
     background-color: hsl(212, 45%, 89%);
     font-family: 'Outfit', sans-serif;
-    font-size: 15px;
-}
-
-h1 {
-    font-weight: 700;
-    font-size: 18px;
     text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
-    margin-top: 10px;
 }
 
-p {
-    font-weight: 400;
-    font-size: 15px;
-    text-align: center;
-    margin: 20px;
-    color: hsl(220, 15%, 55%);
-    font-size: 15px;
-}
-
-.card__image {
-    max-width: 80%
-
-}
-
-.card__image img {
-    max-width: 280px;
-    border: red dashed 1px;
-    position: relative;
-    
-}
-
-.card {
+.container {
+    margin: auto;
+    margin-top: 5rem;
+    margin-bottom: 5rem;
     width: 300px;
-    height: 450px;
-    background-color: hsl(212, 45%, 89%);
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    overflow: hidden;
-    position: relative;
-    margin: 50px auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    background-color: hsl(0, 0%, 100%);
+    text-align: center;
+    padding: 1rem;
+    border-radius: 2rem;
+}
+
+.image {
+    width: 300px;
+    border-radius: 1rem;
+}
+
+.title {
+    font-size: 1.5rem;
+    padding-bottom: 0.5rem;
+    font-weight: 700;
+}
+
+.text {
+    font-size: 15px;
+    text-align: center;
+    font-weight: 400;
+    color: hsl(220, 15%, 55%);
+    padding-bottom: 1rem;
 }
 
 
